<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SosoChaApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="shouye_soso">首页</string>
    <string name="guanzhu_soso">关注</string>
    <string name="qiangdiao_soso">腔调</string>
    <string name="fujing_soso">附近</string>
    <string name="wo_soso">我</string>
	<string name="tuan_gou_title">2014新茶上市正宗雨前龙井团购专场</string>
	<string name="zhou_san_title">特级铁观音安溪茶叶茶农直销  清香。。。</string>
	<string name="ping_lun_title">愉快的一次购物，相当满意。</string>
	<string name="fu_jing_zhu_ying">主营：红茶、白茶、绿茶、大红袍、铁观音。。。。</string>
</resources>