<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/activity_main_shou_ye"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toubudaohang"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/shaoyishao"
             />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/app_soso_shousuokuang"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sousuo" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="132" />
        </LinearLayout>

        <ImageView
            android:id="@+id/main_acitvity_image_denglu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/caidan" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main_guan_zhu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toubudaohang"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/fanhui" />

        <TextView
            android:id="@+id/activity_ding_guan_zhu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="关注"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/caidan" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main_qiang_diao"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toubudaohang"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/fanhui" />

        <TextView
            android:id="@+id/activity_ding_qiang_diao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="腔调"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/caidan" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main_fu_jing"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toubudaohang"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/fanhui" />

        <TextView
            android:id="@+id/activity_ding_fu_jin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="附近"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/caidan" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main_wo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toubudaohang"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/fanhui" />

        <TextView
            android:id="@+id/activity_ding_wo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="我"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/caidan" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <RelativeLayout
        android:id="@+id/main_show"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone" >
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/shou_ye_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#cccccc"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp" >

        <RadioButton
            android:id="@+id/radio_button11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/shouye"
            android:gravity="center"
            android:text="@string/shouye_soso"
            android:textSize="11.5sp" />

        <RadioButton
            android:id="@+id/radio_button12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/guanzhu"
            android:gravity="center"
            android:text="@string/guanzhu_soso"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radio_button13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/qiangdiao"
            android:gravity="center"
            android:text="@string/qiangdiao_soso"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radio_button14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/fujing"
            android:gravity="center"
            android:text="@string/fujing_soso"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radio_button15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/wo"
            android:gravity="center"
            android:text="@string/wo_soso"
            android:textSize="12sp" />
    </RadioGroup>

</LinearLayout>